# osu-collect

./: .gitignore  Cargo.toml  README.md  build.rs  build.sh  config.toml.example  install.bat  install.sh  todo.md
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  release.yml
benches/: collect.rs
examples/: ram_harness.rs
include/: realm_wrapper.hpp
osu-downloader/: Cargo.toml  README.md
osu-downloader/benches/: downloader.rs
osu-downloader/examples/: 01_simple_download.rs  02_custom_mirrors.rs  03_batch_download.rs  04_progress_tracking.rs  05_collection.rs
osu-downloader/src/: batch.rs  collection.rs  config.rs  download.rs  downloader.rs  error.rs  event.rs  http.rs  lib.rs  output_entry.rs  size.rs  url_parse.rs  validation.rs  worker.rs
osu-downloader/src/mirrors/: mod.rs  pool.rs
osu-downloader/tests/: batch.rs  collection.rs  download.rs  downloader.rs  http.rs  mirrors.rs  pool.rs  url_parse.rs  validation.rs  worker.rs
src/: auto_update.rs  cli.rs  lib.rs  main.rs  mirrors.rs  realm_bridge.rs  realm_wrapper.cpp  windows_init.rs
src/app/: banner.rs  collection.rs  collection_state.rs  config.rs  custom_mirrors.rs  download_history.rs  failed_maps.rs  home.rs  ignored_maps.rs  library_cache.rs  login.rs  messages.rs  mod.rs  runtime.rs  snapshots.rs  state.rs  toast.rs  updates.rs  url_history.rs
src/app/runtime/: auth.rs  mirror_probe.rs  mod.rs  resolve.rs  scan.rs  update.rs
src/auth/: mod.rs
src/auth/pages/: login_failure.html  login_success.html
src/config/: constants.rs  migrator.rs  mod.rs  model.rs  service.rs
src/core/collection/: api_client.rs  db_writer.rs  mod.rs  model.rs
src/download/: cleanup.rs  client.rs  collection_db.rs  constants.rs  error.rs  events.rs  http_client.rs  integrity.rs  lock.rs  mod.rs  outstanding.rs  passes.rs  pipeline.rs  precheck.rs  session.rs  size_fetcher.rs  status_helpers.rs  tracker.rs  verified.rs
src/osu_db/: checksum.rs  common.rs  lazer.rs  mod.rs  stable.rs
src/tests/: download.rs  io.rs  lazer.rs  mod.rs
src/tui/: banner.rs  config.rs  download.rs  footer.rs  header.rs  home.rs  login.rs  mod.rs  modal.rs  terminal.rs  theme.rs  toast.rs  updates.rs  widgets.rs
src/tui/view/: components.rs  config.rs  download.rs  footer.rs  home.rs  mod.rs  updates.rs
src/utils/: error.rs  fs.rs  logging.rs  mod.rs  parsing.rs  path.rs
src/worker/: context.rs  io.rs  mirror_pool.rs  mod.rs
tests/: common.rs  mod.rs
tests/api-scripts/: README.md  common.sh  run_all.sh  test_github_releases.sh  test_mirrors_download.sh  test_nekoha_size.sh  test_osu_official.sh  test_osucollector.sh
tests/integ/: lazer.rs  logging.rs  mod.rs  stable.rs  update_collections.rs
tests/tui/: keybind.rs  mod.rs  quit_toast.rs  render.rs  scroll.rs
tests/unit/: active_download_line.rs  app_config.rs  app_messages.rs  app_state.rs  app_toast.rs  app_updates.rs  app_updates_mod.rs  auth.rs  auth_mod.rs  auto_update.rs  banner.rs  cli_mod.rs  close_download_tab.rs  collection_page.rs  collection_snapshots.rs  collection_state.rs  config_migrator.rs  config_save_modal.rs  config_theme.rs  core_db_writer.rs  custom_mirrors.rs  download.rs  download_history.rs  download_pipeline.rs  download_precheck.rs  download_session.rs  error.rs  failed_maps.rs  home.rs  home_completion.rs  home_resolve.rs  ignored_maps.rs  io.rs  library_cache.rs  lock.rs  login.rs  mirror_probe.rs  mirrors.rs  mod.rs  passes.rs  (+16 more)
