[package]
name = "osu-collect"
version = "0.2.1"
edition = "2024"
authors = ["uwuclxdy"]
description = "collection downloader for osu!collector"
license = "MIT"

[dependencies]
reqwest = { version = "0.12.24", default-features = false, features = ["json", "stream", "default-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
semver = "1.0.27"
url = "2.5.7"
toml = "0.9.8"
dirs = "6.0.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "time"] }
futures-util = { version = "0.3.31", default-features = false, features = ["alloc"] }
osu-db = "0.3.0"
ratatui = { version = "0.29.0", default-features = false, features = ["crossterm"] }
crossterm = "0.29.0"
md-5 = "0.10.6"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["fmt", "env-filter", "json", "ansi", "tracing-log"] }
tracing-appender = "0.2.4"
regex-lite = "0.1.8"
whoami = "1.6.1"
cxx = "1.0.190"
fs2 = "0.4.3"

[build-dependencies]
cxx-build = "1.0.190"
cmake = "0.1.54"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_Console", "Win32_Foundation"] }
