[package]
name = "osu-collect"
version = "0.2.2"
edition = "2024"
authors = ["uwuclxdy"]
description = "Download and update installed collections from osu!collector (TUI)"
license = "MIT"
autotests = false

[[bin]]
name = "osu-collect"
path = "src/main.rs"
test = false
doctest = false

[dependencies]
osu-downloader = { path = "osu-downloader" }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "stream", "default-tls", "blocking"] }
bytes = "1.11.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
semver = "1.0.28"
url = "2.5.8"
toml = "1.1.2"
dirs = "6.0.0"
tokio = { version = "1.51.0", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "time"] }
futures-util = { version = "0.3.32", default-features = false, features = ["alloc"] }
osu-db = "0.3.0"
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"] }
crossterm = "0.29.0"
md-5 = "0.11.0"
dashmap = "6.1.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["fmt", "env-filter", "json", "ansi", "tracing-log"] }
tracing-appender = "0.2.4"
regex-lite = "0.1.9"
whoami = "2.1.1"
cxx = "1.0.194"
fs2 = "0.4.3"
smallvec = "1.15.1"
sha2 = "0.11.0"

[[test]]
name = "tests"
path = "tests/mod.rs"

[build-dependencies]
cxx-build = "1.0.194"
cmake = "0.1.58"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_Console", "Win32_Foundation", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Threading", "Win32_System_Diagnostics"] }
