[package]
name = "osu-collect"
version = "0.3.0"
edition = "2024"
authors = ["uwuclxdy"]
description = "Download and update installed collections from osu!collector (TUI)"
license = "MIT"
autotests = false

[[bin]]
name = "osu-collect"
path = "src/main.rs"
test = false
doctest = false

[dependencies]
osu-downloader = { path = "osu-downloader" }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "stream", "default-tls", "blocking", "form"] }
open = "5.3.5"
bytes = "1.11.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
semver = "1.0.28"
toml = "1.1.2"
dirs = "6.0.0"
time = { version = "0.3.49", features = ["formatting"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "time", "net"] }
async-channel = "2.5.0"
futures-util = { version = "0.3.32", default-features = false, features = ["alloc"] }
osu-db = "0.3.0"
ratatui = { version = "0.30.1", default-features = false, features = ["crossterm"] }
crossterm = "0.29.0"
md-5 = "0.11.0"
dashmap = "6.2.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["fmt", "env-filter", "json", "ansi", "tracing-log"] }
tracing-appender = "0.2.5"
regex-lite = "0.1.9"
whoami = "2.1.2"
cxx = "1.0.194"
fs2 = "0.4.3"
smallvec = "1.15.2"
sha2 = "0.11.0"
unicode-width = "0.2.2"

# Suppress link-cplusplus's unconditional `-lstdc++`; build.rs owns C++ runtime linking
# so Windows mingw builds can statically pull libstdc++.a instead of libstdc++-6.dll.
link-cplusplus = { version = "1.0.12", features = ["nothing"] }

[[example]]
name = "ram_harness"
path = "examples/ram_harness.rs"

[[bench]]
name = "collect"
path = "benches/collect.rs"
harness = false

[[test]]
name = "tests"
path = "tests/mod.rs"

[dev-dependencies]
tempfile = "3.27.0"
osu-downloader = { path = "osu-downloader", features = ["test-helpers"] }
criterion = { version = "0.8.2", features = ["html_reports"] }
chrono = "0.4.45"

[build-dependencies]
cxx-build = "1.0.194"
cmake = "0.1.58"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_Console", "Win32_Foundation", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Threading", "Win32_System_Diagnostics"] }
