[package]
name = "osu-downloader"
version = "0.9.2"
edition = "2024"
autotests = false
authors = ["uwuclxdy"]
description = "Library for downloading osu! beatmaps from multiple mirrors"
license = "MIT"
repository = "https://github.com/uwuclxdy/osu-downloader"
keywords = ["osu", "beatmap", "download", "mirror"]
categories = ["api-bindings", "network-programming"]

[dependencies]
reqwest = { version = "0.13.3", default-features = false, features = ["json", "stream", "default-tls"] }
tokio = { version = "1.52.3", features = ["rt", "fs", "io-util", "sync", "time", "macros"] }
tokio-stream = "0.1.18"
async-channel = "2.5.0"
futures-util = { version = "0.3.32", default-features = false, features = ["alloc"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
bytes = "1.11.1"
md-5 = "0.11.0"
dashmap = "6.2.1"
thiserror = "2.0.18"
urlencoding = "2.1.3"
tracing = "0.1.44"
memchr = "2.7.6"

[[bench]]
name = "downloader"
harness = false

[dev-dependencies]
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
tokio-test = "0.4.5"
tempfile = "3.27.0"
criterion = { version = "0.8.2", features = ["html_reports"] }

[features]
default = ["collection", "size-fetch"]

# osucollector.com client + Collection types
collection = []

# Beatmapset size fetching
size-fetch = []

# Expose test helpers (e.g. Downloader::with_client) for integration tests in dependent crates
test-helpers = []
